--- a/j.html
+++ b/j.html
@@ -12,5 +12,7 @@
     <script src="n.js"></script>
     <script src="k.js"></script>
     <script src="p.js"></script>
+    <script src="u.js"></script>
+    <script src="o.js"></script>
   </body>
 </html>
